// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Heading Should render Hero Heading with h1 1`] = `
<div>
  <h1
    class="font-heading text-heading-hero font-bold leading-heading-hero space-y-paragraphSpacing-heading-hero text-typography-prominent"
  >
    Hero heading
  </h1>
</div>
`;

exports[`Heading Should render h1 Heading with h1 1`] = `
<div>
  <h1
    class="font-heading text-heading-h1 font-bold leading-heading-h1 space-y-paragraphSpacing-heading-h1 text-typography-prominent"
  >
    h1 heading
  </h1>
</div>
`;

exports[`Heading Should render h2 Heading with h2 1`] = `
<div>
  <h2
    class="font-heading text-heading-h2 font-bold leading-heading-h2 space-y-paragraphSpacing-heading-h2 text-typography-prominent"
  >
    h2 heading
  </h2>
</div>
`;

exports[`Heading Should render h3 Heading with h3 1`] = `
<div>
  <h3
    class="font-heading text-heading-h3 font-bold leading-heading-h3 space-y-paragraphSpacing-heading-h3 text-typography-prominent"
  >
    h3 heading
  </h3>
</div>
`;

exports[`Heading Should render h4 Heading with h4 1`] = `
<div>
  <h4
    class="font-heading text-heading-h4 font-bold leading-heading-h4 space-y-paragraphSpacing-heading-h4 text-typography-prominent"
  >
    h4 heading
  </h4>
</div>
`;

exports[`Heading Should render h5 Heading with h5 1`] = `
<div>
  <h5
    class="font-heading text-heading-h5 font-bold leading-heading-h5 space-y-paragraphSpacing-heading-h5 text-typography-prominent"
  >
    h5 heading
  </h5>
</div>
`;

exports[`Heading Should render h6 Heading with h6 1`] = `
<div>
  <h6
    class="font-heading text-heading-h6 font-bold leading-heading-h6 space-y-paragraphSpacing-heading-h6 text-typography-prominent"
  >
    h6 heading
  </h6>
</div>
`;

exports[`Heading Should render h7 Heading with h7 1`] = `
<div>
  <h6
    class="font-heading text-heading-h7 font-bold leading-heading-h7 space-y-paragraphSpacing-heading-h7 text-typography-prominent"
  >
    h7 heading
  </h6>
</div>
`;

exports[`Text Should display correct content 1`] = `
<div>
  <p
    class="text-body-md space-y-paragraphSpacing-body-md leading-body-md font-regular not-italic text-typography-prominent"
  >
    Text content
  </p>
</div>
`;
